# cycle-aware-wnba

./: .env  .env.example  .gitignore  CivicPredictorCard.jsx  PlayerDropdown.jsx  README.md  README_old.md  Wizard.jsx  data_sources.json  example_usage.py  package-lock.json  package.json  playerDropdown.js  predict_cycle_phase.py  pyproject.toml  render.yaml  requirements.txt  typing_extensions.py  verify_rosters.py  wnba_rosters.json
.github/workflows/: validate.yml  validator.yml
R/: feature_engineering.R  ingest.R
cycle-aware-wnba/: CONTRIBUTING.md  ETHICS.md  LICENSE  README.md  install_packages.R  model_report.Rmd
cycle-aware-wnba/R/: cycle_aware_wnba_pipeline.R  model_formula.R  pipeline_cycle_aware_wnba.R
cycle-aware-wnba/api/: plumber.R
cycle-aware-wnba/cycle_aware_wnba/: pipeline.py
cycle-aware-wnba/dashboard/: app.R  satirical_dashboard.Rmd
cycle-aware-wnba/data/: schema.md
cycle-aware-wnba/intelligence_feeds/: README.md  __init__.py  base.py  clue_terra.py  data_sources.json  ingest_clue_data.py  ingest_game_stats.py  ingest_wearable_data.py  ingest_weather_sentiment.py  sentiment_twitter.py  wearable_oauth.py  weather_openweather.py  wnba_sportsdata.py
cycle-aware-wnba/modeling/: predict_cycle_phase.R  train_model.R
cycle-aware-wnba/src/: App.jsx
docs/: README.md
intelligence_feeds/: README.md  data_sources.json  ingest_clue_data.py  ingest_game_stats.py  ingest_wearable_data.py  ingest_weather_sentiment.py
models/: model_formula.R
predict/: wizard.tsx
public/: index.html
scripts/: seed_wnba_rosters.py
src/: q4trackr.js
(+24 files in other folders)
